--- a/style.css
+++ b/style.css
@@ -55,7 +55,9 @@ button:hover{
     background-color:  #0a400ccb;
 }
 .senhaCopiada{
+    display: none;
     color: green;
     font-size: 32px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
